--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /** Moved CSS coding around to follow the semantis structure of the HTML elements. **/
-/**Removed padding command due to it being unecessary.**/
 * {
     box-sizing: border-box;
     margin: 0;
+    padding: 0px;
 }
 
 body {
@@ -10,26 +10,25 @@ body {
 }
 
 /** Setting up the header to be at the top of the page as well as style. Specifying where to place the Horiseon logo in the top left of the page. Changing the color of the "seo" to emphasis it. **/
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+h1 {
     display: inline-block;
     font-size: 48px;
 }
 
 /** Made the color darker to emphisis the "seo" more.**/
-.header h1 .seo {
+.seo {
     color: #d9dcd698;
 }
 
 /** Placing the list of links to the top right of the page including style. **/
-/** Added list-style-type command under div to clean up code. Also removed .header div ul command.**/
-.header div {
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -38,14 +37,12 @@ body {
     list-style-type: none;
     }
 
-.header div ul li {
-    display: inline-block;
-    margin-left: 25px;
-}
-
 a {
     color: #ffffff;
     text-decoration: none;
+    display: inline-block;
+    margin-left: 25px; 
+    float: right;
 }
 
 /** Stating all paragraphs to be 16px. **/
@@ -53,7 +50,7 @@ p {
     font-size: 16px;
 }
 
-/** Placing the picture of people working together just under the header. Specifying size, source, position. **/
+/** Placing the picture of people working together just under the header. Specifying size and position. **/
 .hero {
     height: 800px;
     width: 100%;
@@ -63,24 +60,29 @@ p {
 }
 
 /** Setting the content up in the lower left of the page. Also setting up each individual section of the content. Including style. **/
-.content {
+article {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-/** Search Engine Optimization Section **/
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
+/**Setting all image height in content section. **/
+article img {
+    max-height: 200px;
 }
 
-.search-engine-optimization img {
-    max-height: 200px;
+article section{
+        margin-bottom: 20px;
+        padding: 50px;
+        height: 300px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        background-color: #0072bb;
+        color: #ffffff;
+}
+/** Setting all h2 font size and margin. **/
+h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 
 /** Applies to both Search Engine Optimization and Social Media Marketing. **/
@@ -89,56 +91,14 @@ p {
     margin-right: 25px;
 }
 
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-/** Online Reputation Management Section **/
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
+/** Bringing the image to the right of the section. **/
 .float-right {
     float: right;
     margin-left: 25px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-/** Social Media Marketing Section **/
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
 /** Setting up the benefits section to the lower right of the page. Also setting up the images and each individual section of the benefits. **/
-.benefits {
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -149,65 +109,33 @@ p {
     background-color: #2589bd;
 }
 
-/** Lead Generation Section **/
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+/** Setting all h3 margin and text align. **/
+h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-lead img {
+/** Setting all aside images display, margin, and width. **/
+aside img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-/** Brand Awareness Section **/
-.benefit-brand {
+/** Setting the aside section margin and color. **/
+aside section{
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-/** Cost Management Section **/
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-/** Staging the "Made with love by Heriseon" and the copyright at the bottom of the page. Also adding style.**/
-.footer {
+/** Setting footer to the bottom center. **/
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+h4 {
     font-size: 20px;
 }
