--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/** Moved CSS coding around to follow the semantis structure of the HTML elements. **/
+/** CSS reset making the page look the same in all browsers. **/
 * {
     box-sizing: border-box;
     margin: 0;
@@ -9,7 +9,7 @@ body {
     background-color: #d9dcd6;
 }
 
-/** Setting up the header to be at the top of the page as well as style. Specifying where to place the Horiseon logo in the top left of the page. Changing the color of the "seo" to emphasis it. **/
+/** Setting up the header to be at the top of the page as well as style. **/
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -45,12 +45,11 @@ a {
     float: right;
 }
 
-/** Stating all paragraphs to be 16px. **/
 p {
     font-size: 16px;
 }
 
-/** Placing the picture of people working together just under the header. Specifying size and position. **/
+/** Placing the picture of people working together just under the header. **/
 .hero {
     height: 800px;
     width: 100%;
@@ -59,14 +58,14 @@ p {
     background-position: center;
 }
 
-/** Setting the content up in the lower left of the page. Also setting up each individual section of the content. Including style. **/
+/** Setting the content up in the lower left of the page. **/
 article {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-/**Setting all image height in content section. **/
+/**Setting all image height in article section. **/
 article img {
     max-height: 200px;
 }
@@ -79,13 +78,13 @@ article section{
         background-color: #0072bb;
         color: #ffffff;
 }
-/** Setting all h2 font size and margin. **/
+
 h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-/** Applies to both Search Engine Optimization and Social Media Marketing. **/
+/** Bringing the images to the left side. **/
 .float-left {
     float: left;
     margin-right: 25px;
@@ -97,7 +96,7 @@ h2 {
     margin-left: 25px;
 }
 
-/** Setting up the benefits section to the lower right of the page. Also setting up the images and each individual section of the benefits. **/
+/** Pushes the aside section to the right.**/
 aside {
     margin-right: 20px;
     padding: 20px;
@@ -109,7 +108,7 @@ aside {
     background-color: #2589bd;
 }
 
-/** Setting all h3 margin and text align. **/
+
 h3 {
     margin-bottom: 10px;
     text-align: center;
